kube/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
spec:
  selector:
    app: mginx
  type: ClusterIP
  ports:
  - name: http  
    port: 80
    targetPort: 80
    protocol: TCP
